# article-ranking

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  index.html  pyproject.toml
livedemo/: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
livedemo/app/: __init__.py  config.py  deps.py  main.py  schemas.py  serialize.py
livedemo/app/db/: __init__.py  models.py  session.py
livedemo/app/routers/: __init__.py  articles.py  corpora.py  evaluations.py  executions.py
livedemo/app/services/: __init__.py  decomposition.py  evaluators.py  execution_comparison.py  ingestion.py  pipeline_runner.py
livedemo/docker/: backend.Dockerfile  frontend.Dockerfile
livedemo/docs/: brief.md
livedemo/docs/context/: corpus-article-crud.md  cpu-torch-docker-build.md  dev-docker-skeleton.md  evaluation-endpoints-suite.md  execution-comparison-page.md  execution-result-serialization.md  execution-specific-forms.md  executions-index-cross-compare.md  fastapi-db-foundation.md  frontend-module-split.md  frontend-ux-polish.md  local-demo-control.md  locked-execution-rank-params.md  mistral-decomposition-persistence.md  parameter-form-replay.md  polish-hardening.md
livedemo/docs/plans/: corpus-article-crud.md  corpus-article-workspace.md  cpu-torch-docker-build.md  data-model-review-fixes.md  data-model.md  dev-docker-skeleton.md  evaluation-endpoints-suite.md  execution-comparison-page.md  execution-result-serialization.md  execution-specific-forms.md  executions-index-cross-compare.md  fastapi-db-foundation.md  frontend-module-split.md  frontend-ux-polish.md  json-decomposition-upload.md  local-demo-control.md  locked-execution-rank-params.md  mistral-decomposition-persistence.md  parameter-form-replay.md  polish-hardening.md  url-backed-navigation.md  (+1 more)
livedemo/frontend/: biome.json  index.html  package-lock.json  package.json
livedemo/tests/: conftest.py  test_app_foundation.py  test_app_startup_db.py  test_articles.py  test_corpora.py  test_corpus_articles.py  test_db_models.py  test_db_session.py  test_decomposition.py  test_evaluations.py  test_execution_comparison.py  test_executions.py  test_health.py  test_ingestion.py  test_serialize.py
(+103 files in other folders)
