[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-ranker"
version = "0.1.0"
description = "News article ranking and selection library."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = []
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["news_ranker"]

[tool.ruff]
line-length = 88
preview = true
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["news_ranker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
