[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-ranker-livedemo"
version = "0.1.0"
description = "Development web demo for the local news-ranker package."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "news-ranker",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[tool.uv.sources]
news-ranker = { path = "..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]
